# agent-kit

./: .gitignore  Makefile  README.md  docker-compose.yml  entrypoint.sh  ollama-pull.sh  pyproject.toml  python-entrypoint.sh
agent_kit/: agent.py  cli.py  harness.py  memory.py  model.py  terminal.py  tools.py  types.py
agent_kit/interfaces/: base.py  text.py
agent_kit/models/: base.py  vendor_ollama.py  vendor_openai.py
bash/: .bashrc
python/: .bashrc  Dockerfile  entrypoint.sh
