[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "agent-kit"
requires-python = ">=3.9"
dynamic = ["version"]

authors = [
  { name="Florian Scherf", email="mail@florianscherf.de" },
]

readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]

dependencies = [
  "rich",
  "openai",
  "rlpython",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "agent_kit/version.py"

[tool.setuptools.packages.find]
include = ["agent_kit*"]

[tool.setuptools.package-data]
"agent_kit" = ["**"]

[tool.setuptools.exclude-package-data]
"*" = [
  ".*",
  "~*",
  "*.swp",
  "*.pyc",
]
